Fixed Welcome about us Services spacing according to ui

--- a/css/maincss.css
+++ b/css/maincss.css
@@ -3,7 +3,7 @@
   /*Converts the form into an Inline element and the width is given using a relative sizing so that the spacing matches with the desging provided in mobile mode */
   .form-group .makeinline{
     display: inline-block;
-    width: 70vw;
+    width: 73%;
   }
   
   /*Makes the form aling center and the links in the navbar also get aligned center in the mobile mode ofcourse */
@@ -86,7 +86,7 @@ nav.iamblack {
 
 /*This is responsbile for the looks of the welcome ,about us, and the services box . */
 .shadow{
-	 box-shadow: 0px 0px 10px #888888;
+	 box-shadow: 0px 0px 4px #888888;
 	 padding: 5%;
 	 padding-top:1%;
    margin-top: 5%;
@@ -116,12 +116,6 @@ nav.iamblack {
     float: right;
   }
 
-  .container .row div.col-sm-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-
-  }
-  
   .alignRight{
     text-align: right;
   }
@@ -253,7 +247,14 @@ footer a:link,a:hover,a:active,a:visited{
 
 @media (max-width: 767px){
   .shadow{
-    margin-top: 35px;
+    margin-top: 25px;
+  }
+
+  .topmargin{
+    margin-bottom: 0px;
+  }
+  .padding7px{
+     padding-top: 20px;
   }
 
   .col-xs-12 {
@@ -266,11 +267,16 @@ footer a:link,a:hover,a:active,a:visited{
   padding-top: 6px;
   padding-bottom: 6px;
 }
+
+.navbar-form.makeright {
+  padding-left: 20px;
+  padding-right: 20px;
+}
 }
 
 
 .col-xs-12>.pinktext {
-  margin-top: 40px;
+  margin-top: 35px;
 }
 
 .navbar-form.makeright {
@@ -278,4 +284,18 @@ footer a:link,a:hover,a:active,a:visited{
 }
 
 
+@media (min-width: 992px) {
+    .container .row div.col-sm-4 {
+    padding-left: 7px;
+    padding-right: 7px;
 
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px){
+  .container .row div.col-sm-4 {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  
+}
